# cuarenta

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ejecutar.ps1  main.cpp  vcpkg.json
include/: Carta.hpp
recursos/: Carta.cpp  Carta.h  Mano.cpp  Mano.h  Mano.hpp  Mazo.cpp  Mazo.h  Mazo.hpp  Mesa.cpp
src/: Carta.cpp  Mazo.cpp  Mesa.cpp  main.cpp
